ajuste para rodar com a saida formatada e acelerar; inclusão de counts por groupby para entender os clusters e inclusao de Correlation pela matriz de Pearson, que necessitou reconfigurar a JVM para usar o ZGC